# basilisk

./: .gitignore
src/: CMakeLists.txt
src/architecture/: CMakeLists.txt
src/architecture/msgPayloadDefC/: AttitudeMsgPayload.h
src/architecture/utilities/: CMakeLists.txt
src/c_code_example/: CMakeLists.txt  main_bsk_1.cpp  main_bsk_2.cpp  main_bsk_2a.cpp  main_bsk_3.cpp  main_bsk_4.cpp  test_eigen_kinematics.cpp
